--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,22 +12,29 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    build: ./backend/
+    image: sabinadzh/kittygram_backend
     env_file: .env
     volumes:
       - static:/backend_static
       - media:/app/media
+    depends_on:
+      - db
   frontend:
     env_file: .env
-    build: ./frontend/
+    image: sabinadzh/kittygram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static/
+    depends_on:
+      - db
   gateway:
-    build: ./nginx/
+    image: sabinadzh/kittygram_gateway
     env_file: .env
     ports:
       - 9000:80
     volumes:
       - static:/staticfiles
       - media:/app/media
+    depends_on:
+      - backend
+      - frontend
