--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -34,7 +34,7 @@ services:
       - 9000:80
     volumes:
       - static:/staticfiles
-      - media:/app/media
+      - media:/media
     depends_on:
       - backend
       - frontend
