--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ POSTGRES_DB=kittygram
 POSTGRES_USER=kittygram_user
 POSTGRES_PASSWORD=kittygram_password
 DB_NAME=kittygram
+
+DB_HOST=db
+DB_PORT=5432
+
+SECRET_KEY='django-insecure-cg6*%6..1!4$-89$'
+DEBUG=False
+ALLOWED_HOSTS= 
