--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,5 @@
 server {
+  server_tokens off; 
   listen 80;
   index index.html;
 
@@ -14,7 +15,7 @@ server {
   }
 
   location /media/ {
-    root /app;
+    root /app/;
     client_max_body_size 20M;
   }
 
